<resources>
    <string name="app_name">璞境公寓</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="plz_input_account">请输入您的账号</string>
    <string name="plz_input_pwd">请输入您的密码</string>
    <string name="forget_pwd">忘记密码?</string>

    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_name">请输入真实姓名</string>

    <string name="user_name">用\t户\t名 ：</string>
    <string name="cell_phone_number">手\t机\t号 ：</string>
    <string name="pwd">密\t\t\t\t码 ：</string>
    <string name="sex">性\t\t\t\t别 ：</string>
    <string name="sure_pwd">确认密码：</string>
    <string name="captcha">验\t证\t码 ：</string>
    <string name="username">真实姓名:</string>
    <string name="get_captcha">获取验证码</string>
    <string name="agreement">阅读并接受《用户协议》及《隐私权保护声明》</string>
    <string name="register_success">注册成功</string>

    <string name="account">账号</string>

    <string name="over">完成</string>

    <string name="modify_pwd">忘记密码</string>
    <string name="new_pwd">新密码</string>
    <string name="old_pwd">原密码</string>
    <string name="sure_new_pwd">确认密码</string>
    <string name="submit">提交</string>

    <string name="old_pwd_tip">填写原密码</string>
    <string name="new_pwd_tip">填写新密码</string>
    <string name="sure_new_pwd_tip">再次填写确认</string>

    <string name="home">首页</string>
    <string name="restaurant">餐饮</string>
    <string name="exercise">活动</string>
    <string name="mine">我的</string>
    <string name="save">保存</string>
    <string name="message">消息</string>

    <string name="app_description">璞境面客原型APP</string>
    <string name="life_service">生活服务</string>
    <string name="community_calendar">社区日历</string>
    <string name="photo_wall">照片墙</string>
    <string name="more_services">更多服务</string>
    <string name="see_more">查看更多</string>

    <!-- 活动 -->
    <string name="my_registration">我的报名</string>
    <string name="exercise_sort">活动分类</string>
    <string name="date">日期</string>

    <string name="my_calendar">我的日历</string>
    <string name="my_order">我的订单</string>
    <string name="my_bill">我的账单</string>
    <string name="my_msg">我的消息</string>
    <string name="my_album">我的收藏</string>
    <string name="my_activity">我的活动</string>
    <string name="my_commemoration_day">我的纪念日</string>
    <string name="my_change_psd">修改密码</string>

    <string name="setting">设置</string>

    <string name="more">更多</string>

    <string name="my_enroll">我的报名</string>
    <string name="exercise_name">活动名称：</string>
    <string name="exercise_time">活动时间：</string>
    <string name="exercise_addr">活动地址：</string>
    <string name="cancel_enroll">取消报名</string>
    <string name="enroll_success">报名成功</string>
    <string name="format_fee">费用：%s元/人</string>
    <string name="format_remaining">剩余报名人数：%d</string>

    <string name="feedback">意见反馈</string>
    <string name="opinion">意见</string>
    <string name="proposal">建议</string>
    <string name="praise">表扬</string>
    <string name="complaint">投诉</string>
    <string name="feedback_content">反馈内容...</string>
    <string name="my_feedback">我的反馈</string>
    <string name="my_feedback_detail">反馈详情</string>
    <string name="length_limit">0/500字</string>
    <string name="upload_prompt">上传图片/视频：</string>
<!--    <string name="upload_prompt">上传图片/视频：</string>-->

    <string name="profile">个人资料</string>
    <string name="modify_head">点击更换头像</string>
    <string name="nick_name">昵称</string>
    <string name="personal_signature">个性签名</string>
    <string name="identity_authentication">身份认证</string>
    <string name="address">原居住地址</string>
    <string name="room_number">单元及房号</string>
    <string name="cellphone_number">手机号</string>
    <string name="birthday">出生日期</string>
    <string name="emergency_contact">紧急联系人</string>
    <string name="my_housekeeper">我的管家</string>
    <string name="my_doctor">我的医生</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="notice_time">提醒时间</string>
    <string name="matter">事项</string>
    <string name="new_matter">新建事项</string>
    <string name="add">确定</string>
    <string name="add_matter">+添加事项</string>
    <string name="add_commemoration_day">添加纪念日</string>

    <string name="paied_bill">已支付账单</string>
    <string name="to_pay">待支付</string>
    <string name="pay">支付</string>
    <string name="pay_all">全部支付</string>

    <string name="trade_info">交易信息</string>
    <string name="bill_info">账单详情</string>

    <string name="health_manager">健管中心</string>
    <string name="question_investigation">问卷调查</string>

    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="tur">四</string>
    <string name="fri">五</string>
    <string name="sta">六</string>

    <string name="no_data">暂无数据</string>
    <string name="comming_soon">敬请期待</string>
    <string name="format_date_exercise">%s活动</string>
    <string name="exit_prompt">再按一次返回退出程序</string>

    <string name="change_tip">单击进入，长按移动替换</string>

    <string name="know_tip">知道了</string>

    <string name="feedback_type">反馈类型</string>

    <string name="login_tip">用户名或密码不能为空</string>
    <string name="feedback_tip">提交反馈内容不能为空</string>
    <string name="no_msg_tip">暂无消息</string>
    <string name="vcode_null_tip">验证码不能为空</string>
    <string name="psd_no_identical">两次密码不一致</string>
    <string name="phone_null_tip">手机号不能为空</string>
    <string name="phone_tip">手机号格式错误</string>
    <string name="name_null_tip">请填写真实姓名</string>
    <string name="psw_null_tip">密码长度6-20个字符</string>

    <string name="cur_hot_activities">当前热门</string>
    <string name="cur_history_activities">历史活动</string>
    <string name="cur_my_activities">我的活动</string>
    <string name="collect_success_tip">收藏成功</string>

    <string name="rest_routine">常规餐</string>
    <string name="rest_order_meal">零点餐</string>
    <string name="rest_banquets">宴会餐</string>

    <string name="order_rest_banquets">宴会订单</string>
    <string name="order_rest_detail">订单详情</string>

    <string name="see_order">查看订单</string>
    <string name="back_home">返回首页</string>
    
    <string name="order_preview">菜单预览</string>
    <string name="order_see">菜单查看</string>

    <string name="input_phone_tip">请填写手机号码</string>

    <string name="search_detail">查看详情</string>
    <string name="fold">折叠</string>
    <string name="next_day">下一天</string>
    <string name="meal_detail">套餐详情</string>
    <string name="meal">套餐</string>

    <string name="food">菜品</string>

    <string name="reserve">预订</string>
    <string name="banquets_reserve">宴会预订下单</string>
    <string name="order_meal_reserve">零点餐订单</string>
    <string name="reserve_tip">预订须知</string>
    <string name="description_tip">描述</string>
    <string name="reserve_tip_value">必须提前两天预订，如需取消预订，请提前一天通过APP操作或联系客服。</string>

    <string name="rightnow_order">现点</string>
    <string name="reserve_order">预约</string>

    <string name="net_error_tip">连接服务器异常</string>
    <string name="banner_error_tip">查看内容已下架</string>
    <string name="rest_person_num_tip">请输入就餐人数</string>
    <string name="rest_order_date_tip">请输入预订日期</string>
    <string name="rest_order_time_tip">请输入预订时间</string>
    <string name="rest_order_num_tip">请输入餐次</string>

    <string name="edit">编辑</string>

    <string name="year">年</string>

    <string name="rest_num">就餐人数</string>
    <string name="rest_num_tip">请输入人数</string>

    <string name="order_status">订单状态</string>
    <string name="pay_status">支付状态</string>

    <string name="choosed">已选</string>
    <string name="item">项</string>
    <string name="current_order_tip">当前可预订</string>
    <string name="after_order">以后的宴会</string>
    <string name="rest_choose">请选择菜品</string>
    <string name="please_choose">请选择</string>
    <string name="please_input">请输入</string>
    <string name="nutrient_elements">营养元素：</string>

    <string name="mycard">我的卡包</string>
    <string name="invalid_coupon">失效券</string>
    <string name="rights_and_interests">权益券</string>

    <string name="service_content">服务内容</string>
    <string name="service_description">费用说明</string>
    <string name="service_personal">提供人</string>
    <string name="service_address">服务场地</string>

    <string name="history_bill">历史账单</string>
    <string name="my_message">消息</string>

    <string name="go_choose">去选择</string>

    <string name="service_reserve">服务预约</string>
    <string name="service_reserve_tip">预约须知</string>
    <string name="service_reserves_tip">预约须知：</string>
    <string name="venue_reserve">场馆预约</string>

    <string name="sure_submit">确认提交</string>

    <string name="pujing_vip">璞境会员</string>

</resources>