<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color"
        >

        <ImageView
            android:id="@+id/iv_modify_psd_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/ic_back"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_change_psd"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            />


    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_gray"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/old_pwd"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/old_pwd_tip"
            android:textColor="@color/text_gray"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:background="@null"
            />


    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_gray"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            >


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_pwd"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/new_pwd_tip"
                android:textColor="@color/text_gray"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:background="@null"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            >


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sure_new_pwd"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_sure_new_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/sure_new_pwd_tip"
                android:textColor="@color/text_gray"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:background="@null"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_gray"
            />



    </LinearLayout>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_add_rest"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/over"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>