<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_title_bar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/v_title_bar"
        app:layout_constraintEnd_toEndOf="@id/v_title_bar"
        app:layout_constraintStart_toStartOf="@id/v_title_bar"
        app:layout_constraintTop_toTopOf="@id/v_title_bar" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@mipmap/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/v_title_bar"
        app:layout_constraintStart_toStartOf="@id/v_title_bar"
        app:layout_constraintTop_toTopOf="@id/v_title_bar" />

    <TextView
        android:id="@+id/tv_my_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_feedback"
        android:textColor="#ffffffff"
        android:textSize="14sp"
        android:paddingEnd="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@id/v_title_bar"
        app:layout_constraintTop_toTopOf="@id/v_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_title_bar" />


    <RelativeLayout
        android:id="@+id/rl_feedback_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback"
        android:background="@drawable/bg_input_text"
        android:visibility="gone"
        android:elevation="3dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_type"
            android:textColor="@color/text_gray"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/tv_feedback_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opinion"
            android:textColor="@color/text_gray"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_toLeftOf="@+id/iv_feedback_next"
            />

        <ImageView
            android:id="@+id/iv_feedback_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_next_another"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_10"
            />


    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_feedback_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback"
        >

        <RadioButton
            android:id="@+id/rb_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/opinion"
            android:tag="1"
            />

        <RadioButton
            android:id="@+id/rb_opinion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/proposal"
            android:tag="2"
            />

        <RadioButton
            android:id="@+id/rb_praise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/praise"
            android:tag="3"
            />

        <RadioButton
            android:id="@+id/rb_complaint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complaint"
            android:tag="4"
            />


    </RadioGroup>


    <EditText
        android:id="@+id/et_content"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_input_text"
        android:gravity="left"
        android:hint="尊敬的客户您好！我们很乐意分享你的感受，欢迎提出意见和建议，我们会认真对待您的反馈，感谢您的关注和支持，将参考您的建议来改善我们的服务。"
        android:padding="10dp"
        android:textSize="14sp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_feedback_type" />

    <TextView
        android:id="@+id/tv_length_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/length_limit"
        android:textColor="#C5C5C5"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_content" />

    <TextView
        android:id="@+id/tv_upload_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/upload_prompt"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_length_limit" />

    <ImageView
        android:id="@+id/iv_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upload_prompt" />

    <TextView
        android:id="@+id/tv_upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加/更改"
        android:textColor="#ffffffff"
        android:textSize="14sp"
        android:background="@drawable/shape_add_rest"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_upload"
        app:layout_constraintStart_toStartOf="@+id/iv_upload"
        app:layout_constraintEnd_toEndOf="@+id/iv_upload"
        />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_feedback_btn_bg"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>